# agentpack

./: .agentignore  .cursorrules  .gitignore  .mailmap  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.agentpack/: config.toml
.claude/: settings.json
.claude/commands/: agentpack-review.md  agentpack.md
.codex/: hooks.json
.codex-plugin/: plugin.json
.cursor/rules/: agentpack.mdc
.github/: PULL_REQUEST_TEMPLATE.md  contributor-issues.json  contributor-labels.json  copilot-instructions.md  repository-topics.json
.github/DISCUSSION_TEMPLATE/: help-wanted.yml  ideas.yml  roadmap.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: agentpack-pr.yml  agentpack.yml  ci.yml  docs.yml  hol-plugin-scanner.yml  publish-npm.yml  publish.yml  release.yml
.kiro/steering/: agentpack.md
benchmarks/: README.md  public-repos.toml
benchmarks/e2e/: README.md
benchmarks/results/: 2026-05-15-public.md  2026-05-25-router-mvp.md  2026-05-27-public.md  2026-06-10-public.md  2026-06-11-public.md  2026-06-12-public.md  2026-06-13-public.md  2026-06-14-public.md  2026-06-25-public.md  e2e-ab-status.md
benchmarks/results/v0.3.20/: compare-baselines.md  methodology.md  misses.md  public-100.json  public-100.md  repos.md
docs/: agent-plugins.md  agentpack-for-ai-agents.md  agentpack-vs-augment-context-engine.md  agentpack-vs-repomix.md  ai-coding-agent-context.md  architecture.md  benchmark-improvement-problem-statement.md  benchmark-learnings.md  benchmarking.md  claude-code-context-engine.md  codex-plugin.md  commands.md  configuration.md  cursor-context-packing.md  data-flow.md  demo.md  development.md  github-community-setup.md  how-agentpack-works.md  index.md  integrations.md  limitations.md  llms-full.txt  llms.txt  mcp-context-engine.md  privacy.md  reduce-claude-code-token-usage.md  robots.txt  runtime-loop.md  terms.md  threat-model.md  visibility-audit-2026-06-12.md
docs/assets/: seo-schema.js
docs/examples/: agent-behavior-before-after.md
docs/superpowers/plans/: 2026-05-13-pack-freshness-noise.md  2026-05-19-repo-package-seo-implementation.md  2026-05-20-naming-signals-for-ranking-implementation.md  2026-05-20-windows-support-implementation.md  2026-06-09-agentpack-learn-implementation.md  2026-06-10-agentpack-dashboard-implementation.md  2026-06-10-auto-skills-index-dashboard-inventory.md  2026-06-10-ralph-loop-protocol-implementation.md
docs/superpowers/specs/: 2026-05-19-repo-package-seo-design.md  2026-05-20-naming-signals-for-ranking-design.md  2026-05-20-windows-support-design.md  2026-06-09-agentpack-learn-product-gaps-prd.md  2026-06-10-agentpack-dashboard-prd.md  2026-06-10-ralph-loop-protocol-design.md
native-integrations/: README.md  status.json
native-integrations/claude-native/: README.md
native-integrations/codex-native/: README.md
native-integrations/cursor-extension/: README.md  package.json  tsconfig.json
native-integrations/cursor-extension/src/: extension.ts
native-integrations/windsurf-extension/: README.md  package.json
npm/: README.md  package-lock.json  package.json
npm/test/: launcher.test.js  version-sync.test.js
skills/: agentpack-refresh.md  agentpack-review.md
src/agentpack/: __init__.py  cli.py  mcp_server.py
tests/: test_agent_integration_matrix.py  test_antigravity_adapter.py  test_benchmark.py  test_benchmark_capture.py  test_benchmark_perf.py  test_broad_context.py  test_changed_paths.py  test_claude_adapter.py  test_codex_adapter.py  test_codex_plugin.py  test_command_surface.py  test_community_files.py  test_compact_renderer.py  test_context_intelligence.py  test_context_intent.py  test_context_pack.py  test_coverage.py  test_cursor_windsurf_adapters.py  test_dashboard_collectors.py  test_dashboard_command.py  test_dashboard_renderer.py  test_diff.py  test_docs_links.py  test_doctor.py  test_e2e_benchmark_scaffold.py  test_episodic_memory.py  test_eval_command.py  test_eval_memory_ab.py  test_execution_state.py  test_explain_detail.py  test_git.py  test_git_hooks.py  test_global_install.py  test_guard.py  test_hook_cmd.py  test_ignore.py  test_ignore_sync.py  test_imports.py  test_init.py  test_install.py  (+60 more)
tests/integration/: test_pack_pipeline.py
tools/: github_contributor_setup.py  render_demo_assets.py
(+194 files in other folders)
