[project]
name = "agentpack"
version = "1.0.0"
description = "Token-aware context packing for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pathspec>=0.12.1",
  "pydantic>=2.0.0",
  "tomli-w>=1.0.0"
]

[project.scripts]
agentpack = "agentpack.cli:app"

[project.optional-dependencies]
llm = [
  "anthropic>=0.39.0",
  "openai>=1.0.0"
]

dev = [
  "pytest",
  "ruff",
  "mypy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpack"]

[tool.hatch.build.targets.wheel.shared-data]
# no shared data needed; package data is included via include-package-data

[tool.hatch.build]
include = [
  "src/agentpack/**",
]
