[project]
name = "agentpack-cli"
version = "0.1.1"
description = "Token-aware context packing for AI coding agents — Claude, Cursor, Windsurf, and Codex"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["context", "llm", "packing", "claude", "cursor", "windsurf", "codex", "ai", "coding-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pathspec>=0.12.1",
  "pydantic>=2.0.0",
  "tomli-w>=1.0.0",
  "tiktoken>=0.7.0"
]

[project.scripts]
agentpack = "agentpack.cli:app"

[project.optional-dependencies]
llm = [
  "anthropic>=0.39.0",
  "openai>=1.0.0"
]

watch = [
  "watchdog>=4.0.0"
]

all = [
  "anthropic>=0.39.0",
  "openai>=1.0.0",
  "watchdog>=4.0.0"
]

dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpack"]

[tool.hatch.build.targets.wheel.shared-data]
# no shared data needed; package data is included via include-package-data

[tool.hatch.build]
include = [
  "src/agentpack/**",
]
