[project]
name = "agentpack-cli"
version = "0.3.11"
description = "Local context engine for AI coding agents that ranks relevant files and builds task-focused context packs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai-coding-agents", "developer-tools", "repo-analysis", "context-engine", "context-packing", "prompt-context", "mcp", "ci", "codex", "cursor", "windsurf", "antigravity", "ai", "llm", "context", "packing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pathspec>=0.12.1",
  "pydantic>=2.0.0",
  "tomli-w>=1.0.0",
  "tiktoken>=0.7.0",
  "tomli>=2.0.0; python_version < '3.11'"
]

[project.scripts]
agentpack = "agentpack.cli:app"

[project.optional-dependencies]
watch = [
  "watchdog>=4.0.0"
]

mcp = [
  "mcp>=1.0.0"
]

all = [
  "watchdog>=4.0.0",
  "mcp>=1.0.0"
]

dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "tomli>=2.0.0; python_version < '3.11'"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = [
  "src/agentpack/core",
  "src/agentpack/analysis",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpack"]

[tool.hatch.build.targets.wheel.shared-data]
# no shared data needed; package data is included via include-package-data

[tool.hatch.build]
include = [
  "src/agentpack/**",
]
